[gd_scene load_steps=11 format=3 uid="uid://ccc5mffn02s"]

[ext_resource type="Script" path="res://Scripts/SelectUnit.gd" id="1_d1nfk"]
[ext_resource type="Material" uid="uid://c3hjdasnlwa2s" path="res://Materials/UnitSelectionHighlightMat.tres" id="1_dvuqa"]
[ext_resource type="Material" uid="uid://bbj3dpnikmoe7" path="res://Materials/FillerUnitMat.tres" id="2_0h8y6"]
[ext_resource type="Material" uid="uid://c84evxjk5m2i6" path="res://Materials/BreakerUnitMat.tres" id="3_4e3e2"]

[sub_resource type="BoxMesh" id="BoxMesh_tl7qb"]
size = Vector3(5, 0.05, 5)

[sub_resource type="BoxMesh" id="BoxMesh_yind2"]
material = ExtResource("1_dvuqa")
size = Vector3(5.5, 0.05, 5.5)

[sub_resource type="BoxMesh" id="BoxMesh_p7s2g"]
material = ExtResource("2_0h8y6")
size = Vector3(0.5, 0.5, 0.5)

[sub_resource type="BoxMesh" id="BoxMesh_fbhx1"]
material = ExtResource("3_4e3e2")
size = Vector3(0.5, 0.5, 0.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_e0sjh"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_sgbmv"]
material = SubResource("StandardMaterial3D_e0sjh")
size = Vector3(50, 0.05, 50)

[node name="JTestSelectScene" type="Node3D"]
script = ExtResource("1_d1nfk")

[node name="SelectionBox1" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="SelectionBox1"]
mesh = SubResource("BoxMesh_tl7qb")
skeleton = NodePath("../..")

[node name="SelectionHighlight1" type="MeshInstance3D" parent="SelectionBox1/MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.05, 0)
visible = false
mesh = SubResource("BoxMesh_yind2")
skeleton = NodePath("../../..")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="SelectionBox1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
mesh = SubResource("BoxMesh_p7s2g")

[node name="SelectionBox2" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="SelectionBox2"]
mesh = SubResource("BoxMesh_tl7qb")
skeleton = NodePath("../..")

[node name="SelectionHighlight2" type="MeshInstance3D" parent="SelectionBox2/MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.05, 0)
visible = false
mesh = SubResource("BoxMesh_yind2")
skeleton = NodePath("../../..")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="SelectionBox2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
mesh = SubResource("BoxMesh_fbhx1")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label1" type="Label" parent="Control"]
layout_mode = 0
offset_left = 526.0
offset_top = 33.0
offset_right = 659.0
offset_bottom = 56.0
text = "Select Unit Order
"

[node name="UnitDescriptionLabel1" type="Label" parent="Control"]
layout_mode = 0
offset_left = 150.0
offset_top = 450.0
offset_right = 424.0
offset_bottom = 499.0
text = "Fill Unit
Turn fillable tiles into walkable tiles"
horizontal_alignment = 1

[node name="UnitDescriptionLabel2" type="Label" parent="Control"]
layout_mode = 0
offset_left = 700.0
offset_top = 450.0
offset_right = 999.0
offset_bottom = 499.0
text = "Breaker Unit
Turn breakable tiles into walkable tiles"
horizontal_alignment = 1

[node name="Background" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
mesh = SubResource("BoxMesh_sgbmv")
